--- a/.gitignore
+++ b/.gitignore
@@ -2,21 +2,11 @@ cache/
 vendor
 bin
 webdata/
-# File di output scraping (CSV)
 output/*.csv
-
-# File di input personalizzati (opzionale - rimuovi se vuoi versionarli)
-# input/*.txt
-
-# File temporanei
+input/*.txt
+.cursor/
 *.tmp
 *.bak
-
-# Log
 *.log
-
-# Binary compilato
 google-maps-scraper
-
-# Cache
-cache/
+.DS_Store
